# research-agent-3

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  KNOWN_LIMITATIONS.md  LICENSE  PROJECT_STATUS.md  README.md  RELEASE_NOTES.md  REPO_METADATA.md  ROADMAP.md  SECURITY.md  TASKS.md  pyproject.toml  requirements.txt
.github/workflows/: daily.yml  lint.yml  test.yml
src/lyme_agent/: __init__.py  __main__.py  config.py  discovery.py  discovery_real.py  emailing.py  models.py  orchestrator.py  persistence.py  reporting.py  verification.py
tests/: test_config.py  test_discovery.py  test_discovery_real.py  test_emailing.py  test_orchestrator.py  test_orchestrator_extended.py  test_persistence.py  test_persistence_extended.py  test_reporting.py  test_verification.py
