[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronic-lyme-research-agent"
version = "0.1.0"
description = "Autonomous research agent for chronic Lyme disease / PTLDS"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
lyme-agent = "lyme_agent.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
